--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "testasync",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"node_modules\\.bin\\tsc",
+    "start":"node .",
+    "prestart": "npm run build"
   },
   "keywords": [],
   "author": "",
